# tgtg-python

./: pyproject.toml
tgtg/: __init__.py
