[tool.poetry]
name = "tgtg-drlocke"
version = "0.18.5"
description = "My fork of tgtg-python"
readme = "README.md"
authors = ["drlocke <drlocke@github.com>"]
repository = "https://github.com/drlocke/tgtg-python"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.isort]
profile = "black"

[tool.poetry.dev-dependencies]
freezegun = "^1.5.1"
pre-commit = "^4.3.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-responses = "^0.5.1"
responses = "^0.25.8"
typed-ast = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.masonry.api"
